@@ -1,5 +1,7 @@
 2006-10-08  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* linux/dev/drivers/scsi/hosts.c: Remove file.
+	
 	* linux/dev/drivers/block/ide.c: Move file...
 	* linux/src/drivers/block/ide.c: ... here.
 	
